transform 위치 변경

--- a/test.ipynb
+++ b/test.ipynb
@@ -11,17 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Atypical', 'Indeterminate', 'Negative', 'Typical']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "DATA_DIR = os.path.join(os.getcwd(), 'RSNA_COVID_png_512')\n",
     "\n",
@@ -96,7 +88,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter containing:\n",
+      "tensor([[[[-7.8093e-03,  6.8120e-03,  5.7406e-03,  ...,  1.2872e-02,\n",
+      "            9.1395e-03, -2.8071e-02],\n",
+      "          [-4.5682e-03,  9.6330e-03,  4.4220e-02,  ...,  9.5410e-02,\n",
+      "            8.1550e-02,  6.4484e-02],\n",
+      "          [-2.9053e-02, -5.1312e-02, -5.7291e-02,  ...,  1.1006e-01,\n",
+      "            1.2317e-01,  1.2586e-01],\n",
+      "          ...,\n",
+      "          [ 1.7908e-02,  1.7311e-02, -5.6169e-02,  ..., -2.7396e-01,\n",
+      "           -2.1190e-01, -8.4858e-02],\n",
+      "          [ 5.3169e-02,  9.9450e-02,  1.1513e-01,  ...,  4.2284e-03,\n",
+      "           -9.4499e-02, -8.9947e-02],\n",
+      "          [-3.1243e-02,  3.7058e-02,  8.1318e-02,  ...,  1.3679e-01,\n",
+      "            8.2674e-02,  1.6161e-02]]],\n",
+      "\n",
+      "\n",
+      "        [[[ 4.0948e-03,  4.3650e-03, -4.6187e-04,  ...,  8.4505e-03,\n",
+      "           -1.6375e-03,  6.1063e-03],\n",
+      "          [ 9.1770e-03,  4.2219e-03,  3.6380e-03,  ...,  5.0033e-03,\n",
+      "            2.8041e-03,  1.9822e-03],\n",
+      "          [-4.6230e-03,  2.1304e-03,  2.8272e-03,  ...,  1.7730e-03,\n",
+      "           -1.8185e-03,  1.4826e-03],\n",
+      "          ...,\n",
+      "          [ 4.4822e-03,  4.5643e-03, -7.6398e-03,  ...,  6.9509e-03,\n",
+      "           -1.0536e-02, -1.8834e-03],\n",
+      "          [ 8.8233e-03, -5.5721e-03,  5.5408e-03,  ..., -7.3763e-03,\n",
+      "           -1.9129e-03, -2.2327e-03],\n",
+      "          [ 3.3635e-03,  5.4355e-03, -5.9968e-03,  ...,  8.2206e-03,\n",
+      "           -3.1213e-03,  5.5158e-03]]],\n",
+      "\n",
+      "\n",
+      "        [[[ 9.8104e-03, -3.8344e-03, -9.8832e-03,  ..., -5.1713e-03,\n",
+      "            1.5983e-02,  2.1078e-02],\n",
+      "          [ 3.6385e-03, -7.3195e-03, -1.8240e-02,  ..., -3.8334e-04,\n",
+      "            1.7570e-02, -1.0188e-03],\n",
+      "          [ 8.4032e-03,  8.7240e-04, -1.1438e-02,  ...,  1.7171e-02,\n",
+      "            2.0007e-02,  1.0577e-02],\n",
+      "          ...,\n",
+      "          [-3.3373e-03, -2.6463e-02, -5.7915e-02,  ..., -3.3408e-02,\n",
+      "           -2.5526e-02, -1.0466e-02],\n",
+      "          [ 2.3086e-04, -5.0343e-03, -3.1841e-02,  ..., -6.4856e-02,\n",
+      "           -6.5663e-02, -3.0958e-02],\n",
+      "          [ 2.2316e-02,  1.2799e-02, -5.7910e-03,  ..., -4.2829e-02,\n",
+      "           -4.1204e-02, -1.4632e-02]]],\n",
+      "\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "\n",
+      "        [[[ 8.8674e-03,  2.9015e-02,  1.6426e-02,  ..., -3.2900e-02,\n",
+      "            3.3034e-02,  1.7405e-02],\n",
+      "          [-1.4693e-02,  8.6969e-02,  5.1987e-02,  ..., -8.5613e-02,\n",
+      "            1.0340e-01,  2.4179e-02],\n",
+      "          [-2.8373e-02,  1.4959e-01,  6.1727e-02,  ..., -1.1357e-01,\n",
+      "            1.8313e-01,  1.9455e-02],\n",
+      "          ...,\n",
+      "          [ 1.4343e-02,  1.4729e-01, -7.9402e-02,  ...,  4.7914e-02,\n",
+      "            1.9039e-01, -5.5830e-03],\n",
+      "          [ 8.2266e-03,  7.4360e-02, -8.1503e-02,  ...,  4.7108e-02,\n",
+      "            1.0298e-01, -3.4619e-02],\n",
+      "          [ 1.1939e-02,  2.2544e-02, -7.1229e-02,  ...,  5.5667e-02,\n",
+      "            5.4127e-02, -1.9062e-02]]],\n",
+      "\n",
+      "\n",
+      "        [[[ 1.0517e-04,  1.3705e-02,  1.3122e-02,  ..., -3.3230e-03,\n",
+      "            7.1635e-03, -2.5353e-03],\n",
+      "          [ 1.4201e-02,  1.3581e-02,  2.8052e-02,  ..., -2.4751e-02,\n",
+      "           -2.4743e-02, -1.2098e-02],\n",
+      "          [ 2.3678e-02,  1.4490e-02,  4.4262e-02,  ..., -8.3106e-02,\n",
+      "           -2.5477e-02, -2.1214e-03],\n",
+      "          ...,\n",
+      "          [-3.2162e-03,  6.1573e-03, -5.9961e-02,  ..., -8.0120e-02,\n",
+      "           -4.5954e-02,  1.9565e-02],\n",
+      "          [ 4.6212e-03,  7.6121e-05, -3.7663e-02,  ..., -8.9683e-02,\n",
+      "            2.2851e-03,  2.5663e-02],\n",
+      "          [-4.6329e-03, -1.4531e-02, -3.4461e-02,  ..., -6.0768e-02,\n",
+      "            1.6901e-02,  2.7066e-02]]],\n",
+      "\n",
+      "\n",
+      "        [[[ 1.7177e-02, -3.4826e-02,  4.1031e-02,  ..., -4.7142e-02,\n",
+      "            2.1109e-02,  7.4449e-04],\n",
+      "          [-4.1600e-02,  6.3853e-02, -2.4781e-02,  ...,  3.1923e-02,\n",
+      "           -8.7446e-03, -1.0331e-02],\n",
+      "          [ 5.0374e-02, -5.1689e-02, -6.5200e-02,  ..., -2.0136e-01,\n",
+      "            2.0084e-02,  2.8662e-02],\n",
+      "          ...,\n",
+      "          [-2.8682e-02,  7.7265e-02,  1.2943e-01,  ...,  5.4690e-01,\n",
+      "           -7.6556e-02, -7.0384e-02],\n",
+      "          [-2.5443e-02,  8.6833e-02, -1.9089e-01,  ...,  2.2318e-01,\n",
+      "           -2.8681e-01,  1.2855e-01],\n",
+      "          [-5.0715e-04,  1.6486e-02, -5.8026e-02,  ..., -7.9736e-02,\n",
+      "            4.0569e-02, -1.8814e-02]]]], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "backbone = models.resnet50(pretrained='imagenet')\n",
+    "#self.backbone.conv1 = nn.Conv2d(img_channel, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\n",
+    "\n",
+    "checkpoint = torch.load(\"/home/ubuntu/.cache/torch/checkpoints/resnet50-19c8e357.pth\")\n",
+    "conv1_weight = checkpoint['conv1.weight']\n",
+    "# checkpoint['conv1.weight'] = conv1_weight.mean(dim=1, keepdim=True)\n",
+    "print(torch.nn.Parameter(conv1_weight.mean(dim=1, keepdim=True)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -278,10 +384,8 @@
       "      )\n",
       "    )\n",
       "    (avgpool): AdaptiveAvgPool2d(output_size=(1, 1))\n",
-      "    (fc): Linear(in_features=2048, out_features=1000, bias=True)\n",
+      "    (fc): Linear(in_features=2048, out_features=4, bias=True)\n",
       "  )\n",
-      "  (avgpool): AdaptiveAvgPool2d(output_size=(1, 1))\n",
-      "  (fc): Linear(in_features=2048, out_features=4, bias=True)\n",
       ")\n"
      ]
     }
@@ -291,20 +395,26 @@
     "import torch.nn.functional as F\n",
     "from efficientnet_pytorch import EfficientNet\n",
     "from torchvision import models\n",
+    "from torch.utils.model_zoo import load_url as load_state_dict_from_url\n",
+    "import torch \n",
+    "\n",
+    "model_urls = {\n",
+    "    \"resnet50\": 'https://download.pytorch.org/models/resnet50-19c8e357.pth',\n",
+    "}\n",
     "\n",
     "class Pre_Resnet50(nn.Module):\n",
     "    def __init__(self, img_channel, num_classes, pretrained=True):\n",
     "        super(Pre_Resnet50, self).__init__()\n",
     "        self.backbone = models.resnet50(pretrained=pretrained)\n",
     "        self.backbone.conv1 = nn.Conv2d(img_channel, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\n",
+    "        \n",
+    "        checkpoint = torch.load(\"/home/ubuntu/.cache/torch/checkpoints/resnet50-19c8e357.pth\")\n",
+    "        conv1_weight = checkpoint['conv1.weight']\n",
+    "        self.backbone.conv1.weight = torch.nn.Parameter(conv1_weight.mean(dim=1, keepdim=True))\n",
     "\n",
-    "        self.avgpool = nn.AdaptiveAvgPool2d((1, 1))\n",
-    "        self.fc = nn.Linear(512 * 4, num_classes)\n",
-    "\n",
-    "        ##### 변경 #########\n",
     "        self.backbone.avgpool = nn.AdaptiveAvgPool2d((1, 1))\n",
     "        self.backbone.fc = nn.Linear(512 * 4, num_classes)\n",
-    "        \n",
+    "    \n",
     "    def forward(self, x):\n",
     "        x = self.backbone.conv1(x)\n",
     "        x = self.backbone.bn1(x)\n",
@@ -559,6 +669,13 @@
     "    net = Pre_Resnet50(img_channel=1, num_classes=4)\n",
     "    print(net)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
